--- a/modules/widget/builder.css
+++ b/modules/widget/builder.css
@@ -5,14 +5,14 @@ body {
 }
 
 #editor {
-	width: 300px;
+	width: 310px;
 	height: 100%;
 	bottom: 0;
 	float: left;
-	overflow: hidden;
 	background: #4A4A4A;
 	color: #FFFFFF;
 	padding-left: 12px;
+    overflow: auto;
 }
 
 #editor h1 {
@@ -22,6 +22,11 @@ body {
 	padding: 10px;
 	margin: 0 20px 20px 20px;
 	text-align: left;
+}
+
+#preview {
+	height: 100%;
+	overflow: auto;
 }
 
 #widget {
